Collapsible menu is added

--- a/pages/project1.html
+++ b/pages/project1.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/style-contact.css" />
     <link rel="stylesheet" href="../style/style-project.css" />
+    <link rel="stylesheet" href="../style/style-menu-sm.css" />
     <title>Kindled</title>
   </head>
   <body>
@@ -16,7 +17,35 @@
             <h1>Kindled</h1>
             <p class="title--about">
             story-rich brand design for the modelrn ENTREPRENEUR</p>
-            </a>
+        </a>
+        <div class="menu-sm">
+          <div class="menu-sm--icon not-active">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="menu-sm--wrapper">
+            <ul class="menu-sm--ul">
+              <li class="menu-sm--projects-li">
+                <div class="menu-sm--projects">
+                  <div class="menu-sm--projects-button">
+                    <span class="menu-sm--projects-button-1"></span>
+                    <span class="menu-sm--projects-button-2"></span>
+                  </div>
+                  Projects
+                </div>
+                <ul class="menu-sm--projects-ul">
+                  <li><a href="../pages/project1.html">Alex-Mary</a></li>
+                  <li><a href="../pages/project2.html">1989</a></li>
+                </ul>
+              </li>
+              <li class="menu-sm--li"><a href="">About</a></li>
+              <li class="menu-sm--li">
+                <a href="../pages/contact.html">Inquire</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="main-section grid">
           <div class="slider-section">
