--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style-menu-sm.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -18,6 +19,34 @@
             story-rich brand design for the modelrn ENTREPRENEUR
           </p>
         </a>
+        <div class="menu-sm">
+          <div class="menu-sm--icon not-active">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <div class="menu-sm--wrapper">
+            <ul class="menu-sm--ul">
+              <li class="menu-sm--projects-li">
+                <div class="menu-sm--projects">
+                  <div class="menu-sm--projects-button">
+                    <span class="menu-sm--projects-button-1"></span>
+                    <span class="menu-sm--projects-button-2"></span>
+                  </div>
+                  Projects
+                </div>
+                <ul class="menu-sm--projects-ul">
+                  <li><a href="pages/project1.html">Alex-Mary</a></li>
+                  <li><a href="pages/project2.html">1989</a></li>
+                </ul>
+              </li>
+              <li class="menu-sm--li"><a href="">About</a></li>
+              <li class="menu-sm--li">
+                <a href="pages/contact.html">Inquire</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="menu">
         <div class="menu-flex">
@@ -181,6 +210,10 @@
       </div>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a076d05399.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js"></script>
   </body>
 </html>
